# AVACORE

./: .clang-format  CMakeLists.txt  README.md
include/: config.h.in  console.h
src/: console.cpp  main.cpp  window.cpp
